Should fix IE9 dropdown menu 1px gap (issue #2)

--- a/sass/_06_navigation.scss
+++ b/sass/_06_navigation.scss
@@ -36,8 +36,8 @@
 	left: 0;
 	z-index: 99999;
 	text-align: left;
-	padding-top: 5px;
-	margin-top: -1px; /* fixes 1px gap */
+	margin-top: -1px;
+	padding-top: 1px;
 }
 .main-navigation ul ul ul {
 	left: 100%;
